Update neurips result

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -115,7 +115,7 @@
   abstract={A new approach to $L_2$-consistent estimation of a general density functional using k-nearest neighbor distances is proposed, where the functional under consideration is in the form of the expectation of some function f of the densities at each point. The estimator is designed to be asymptotically unbiased, using the convergence of the normalized volume of a $k$-nearest neighbor ball to a Gamma distribution in the large-sample limit, and naturally involves the inverse Laplace transform of a scaled version of the function $f$. Some instantiations of the proposed estimator recover existing $k$-nearest neighbor based estimators of Shannon and Rényi entropies and Kullback–Leibler and Rényi divergences, and discover new consistent estimators for many other functionals such as logarithmic entropies and divergences. The $L_2$-consistency of the proposed estimator is established for a broad class of densities for general functionals, and the convergence rate in mean squared error is established as a function of the sample size for smooth, bounded densities.},
 }
 
-@article{Ryu--Bhatt2022,
+@article{Ryu--Bhatt2024,
   abbr={TIT},
   title={On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies},
   author={Ryu, J. Jon and Bhatt, Alankrita},
@@ -125,17 +125,17 @@
   author+an={1=highlight},
   journal=tit,
   arxiv={2207.12382},
+  html={},
   code={https://github.com/jongharyu/confidence-sequence-via-gambling},
   selected={true},
   abstract={This paper considers the problem of constructing a confidence sequence, which is a sequence of confidence intervals that hold uniformly over time, for estimating the mean of bounded real-valued random processes.
 This paper revisits the gambling-based approach established in the recent literature from a natural \emph{two-horse race} perspective, and demonstrates new properties of the resulting algorithm induced by Cover (1991)'s universal portfolio.
 The main result of this paper is a new algorithm based on a mixture of lower bounds, which closely approximates the performance of Cover's universal portfolio with constant per-round time complexity.
 A higher-order generalization of a lower bound on a logarithmic function in (Fan et al., 2015), which is developed as a key technique for the proposed algorithm, may be of independent interest.},
-  note={To appear in <i>IEEE Trans. Inf. Theory</i>.},
 }
 
 % conference proceedings
-@inproceedings{Ryu--Kim2018CUDE,
+@inproceedings{Ryu--Kim2018,
   abbr={ICIP},
   title={Conditional distribution learning with neural networks and its application to universal image denoising},
   author={Ryu, Jongha and Kim, Young-Han},
@@ -207,6 +207,10 @@ A concrete example of dot-product kernels over hypersphere is provided to illust
   author+an={1=highlight},
   booktitle=aistats,
   arxiv={2202.02406},
+  html={https://proceedings.mlr.press/v151/ryu22a.html},
+  month = 	 {28--30 Mar},
+  vol={151},
+  pages = 	 {6022--6044},
   pdf={aistats2022.pdf},
   poster={aistats2022-poster.pdf},
   code={https://github.com/jongharyu/olo-with-side-information},
@@ -228,6 +232,9 @@ By modifying the context-tree weighting technique of Willems, Shtarkov, and Tjal
   author+an={1=equal;2=highlight,equal},
   arxiv={2202.02431},
   html={https://proceedings.mlr.press/v206/bhatt23a.html},
+  pages = 	 {4147--4163},
+  volume = 	 {206},
+  month = 	 {25--27 Apr},
   booktitle=aistats,
   abstract={A new portfolio selection strategy that adapts to a continuous side-information sequence is presented, with a universal wealth guarantee against a class of state-constant rebalanced portfolios with respect to a state function that maps each side-information symbol to a finite set of states.
 In particular, given that a state function belongs to a collection of functions of finite Natarajan dimension, the proposed strategy is shown to achieve, asymptotically to first order in the exponent, the same wealth as the best state-constant rebalanced portfolio with respect to the best state function, chosen in hindsight from observed market.
@@ -365,11 +372,12 @@ The utility of the proposed approach is demonstrated through experiments for joi
   note={Under revision; ``reject and resubmit'' from <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i><br><a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
 }
 
-@misc{Ryu--Shen--Ghosh--Bu--Sattigerri--Wornell2024,
-  abbr={arXiv},
+@inproceedings{Shen--Ryu--Ghosh--Bu--Sattigerri--Wornell2024,
+  abbr={NeurIPS},
   title={Are Uncertainty Quantification Capabilities of Evidential Deep Learning a Mirage?},
   author={Shen*, Maohao and Ryu*, J. Jon and Ghosh, Soumya and Bu, Yuheng and Sattigeri, Prasanna and Das, Subhro and Wornell, Gregory W.},
   year={2024},
+  booktitle=neurips,
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   author+an={2=highlight},
