--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -208,7 +208,7 @@ A concrete example of dot-product kernels over hypersphere is provided to illust
   booktitle=aistats,
   arxiv={2202.02406},
   html={https://proceedings.mlr.press/v151/ryu22a.html},
-  month = 	 {28--30 Mar},
+  month = 	 mar,
   vol={151},
   pages = 	 {6022--6044},
   pdf={aistats2022.pdf},
@@ -234,7 +234,7 @@ By modifying the context-tree weighting technique of Willems, Shtarkov, and Tjal
   html={https://proceedings.mlr.press/v206/bhatt23a.html},
   pages = 	 {4147--4163},
   volume = 	 {206},
-  month = 	 {25--27 Apr},
+  month = 	 apr,
   booktitle=aistats,
   abstract={A new portfolio selection strategy that adapts to a continuous side-information sequence is presented, with a universal wealth guarantee against a class of state-constant rebalanced portfolios with respect to a state function that maps each side-information symbol to a finite set of states.
 In particular, given that a state function belongs to a collection of functions of finite Natarajan dimension, the proposed strategy is shown to achieve, asymptotically to first order in the exponent, the same wealth as the best state-constant rebalanced portfolio with respect to the best state function, chosen in hindsight from observed market.
@@ -353,7 +353,7 @@ We consider a distributed learning scenario, in which a massive dataset is split
 We propose \emph{optimal} rules to aggregate the fixed-$k$-NN information for classification, regression, and density estimation that achieve minimax optimal rates for the respective problems.
 We show that the distributed algorithm with a fixed $k$ over a sufficiently large number of groups attains a minimax optimal error rate up to a multiplicative logarithmic factor under some regularity conditions.
 Roughly speaking, distributed $k$-NN rules with $M$ groups has a performance comparable to the standard $\Theta(kM)$-NN rules even for fixed $k$.},
-  note={Submitted to <i>Journal of Machine Learning Research</i><br>.}
+  note={Submitted.}
 }
 
 @misc{Ryu--Choi--Kim--El-Khamy--Lee2022,
@@ -369,8 +369,8 @@ The utility of the proposed approach is demonstrated through experiments for joi
   arxiv={1905.10945},
   code={https://github.com/jongharyu/wyner-model},
   selected={true},
-  note={Under revision; ``reject and resubmit'' from <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i><br><a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
-}
+  note={Submitted. <a href="http://bayesiandeeplearning.org/2018/papers/122.pdf">{A preliminary version}</a> of this manuscript was presented at the Bayesian Deep Learning Workshop at NeurIPS 2018, and <a href="http://bayesiandeeplearning.org/2021/papers/67.pdf">{an abridged version}</a> of the current manuscript was presented at the Bayesian Deep Learning workshop at NeurIPS 2021.},
+} % ; ``reject and resubmit'' from <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i><br>
 
 @inproceedings{Shen--Ryu--Ghosh--Bu--Sattigerri--Wornell2024,
   abbr={NeurIPS},
