--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -387,11 +387,12 @@ The utility of the proposed approach is demonstrated through experiments for joi
 } % ; ``reject and resubmit'' from <i>{IEEE} Trans. Pattern Anal. Mach. Intell.</i><br>
 
 @misc{Ryu--Shah--Wornell2024,
-  abbr={working},
+  abbr={arXiv},
   title={A Unified View on Learning Unnormalized Distributions via Noise-Contrastive Estimation},
   author={Ryu, J. Jon and Shah, Abhin and Wornell, Gregory W.},
   year={2024},
   author+an={1=highlight},
+  abstract={This paper studies a family of estimators based on noise-contrastive estimation (NCE) for learning unnormalized distributions. The main contribution of this work is to provide a unified perspective on various methods for learning unnormalized distributions, which have been independently proposed and studied in separate research communities, through the lens of NCE. This unified view offers new insights into existing estimators. Specifically, for exponential families, we establish the finite-sample convergence rates of the proposed estimators under a set of regularity assumptions, most of which are new.},
   primaryClass={stat.ML},
   archivePrefix={arXiv},
   eprint={2409.18209},
