Add news for arxiv

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -419,7 +419,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
 @misc{Jayashankar--Ryu--Wornell2025,
   abbr={arXiv},
   title={Score-of-Mixture Training: Training One-Step Generative Models Made Simple},
-  author={Jayashankar*, Tejas and Ryu*, J. Jon and Wornell, Gregory},
+  author={Jayashankar*, Tejas and Ryu*, J. Jon and Wornell, Gregory W.},
   author+an={2=highlight},
   year={2025},
   abstract={We propose Score-of-Mixture Training (SMT), a novel framework for training one-step generative models by minimizing a class of divergences called the $\alpha$-skew Jensen-Shannon divergence. At its core, SMT estimates the score of mixture distributions between real and fake samples across multiple noise levels. Similar to consistency models, our approach supports both training from scratch (SMT) and distillation using a pretrained diffusion model, which we call Score-of-Mixture Distillation (SMD). It is simple to implement, requires minimal hyperparameter tuning, and ensures stable training. Experiments on CIFAR-10 and ImageNet 64x64 show that SMT/SMD are competitive with and can even outperform existing methods.},
