--- a/_news/2025_02_19_arxiv.md
+++ b/_news/2025_02_19_arxiv.md
@@ -5,5 +5,5 @@ inline: true
 ---
 
 New paper alerts! We propose:
-(1) a new simple and stable training scheme for one-step generative models [[paper1]](https://arxiv.org/abs/2502.09609); 
-(2) new techniques for efficient off-policy contextual bandits [[paper2]](https://arxiv.org/abs/2502.10826).
+(1) a new simple and stable training scheme for one-step generative models [\[paper1\]](https://arxiv.org/abs/2502.09609); 
+(2) new techniques for efficient off-policy contextual bandits [\[paper2\]](https://arxiv.org/abs/2502.10826).
