Update ICML results (2)

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -377,6 +377,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   eprint = {2502.09609},
   arXiv = {2502.09609},
   selected = {true},
+  note={Spotlight (top 2.6%)},
 }
 
 % preprints
