--- a/_news/2024_09_25_neurips.md
+++ b/_news/2024_09_25_neurips.md
@@ -4,4 +4,4 @@ date: 2024-09-25 00:00:00-0000
 inline: true
 ---
 
-Our paper on [demystifying the sucess of evidential deep learning methods](http://arxiv.org/abs/2402.06160) got accepted at NeurIPS 2024!
+[One paper](http://arxiv.org/abs/2402.06160) accepted at NeurIPS 2024!
