--- a/_news/2024_08_21_tit.md
+++ b/_news/2024_08_21_tit.md
@@ -4,4 +4,4 @@ date: 2024-08-21 00:00:00-0000
 inline: true
 ---
 
-[One paper](http://arxiv.org/abs/2207.12382) on gambling-based confidence sequences has been accepted at *IEEE Transactions on Information Theory*!
+[One paper](http://arxiv.org/abs/2207.12382) accepted at *IEEE Transactions on Information Theory*!
