Add working papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -471,7 +471,7 @@ The utility of the proposed approach is demonstrated through experiments for joi
   year={2025},
   author+an={1=highlight},
   selected={false},
-  note={Submitted.}
+  note={In preparation.}
 }
 
 # unpublished technical reports
