--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -355,6 +355,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   author={Ryu, J. Jon and Shah, Abhin and Wornell, Gregory W.},
   author+an={1=highlight},
   year={2025},
+  month=jul,
   booktitle=icml,
   abstract={This paper studies a family of estimators based on noise-contrastive estimation (NCE) for learning unnormalized distributions. The main contribution of this work is to provide a unified perspective on various methods for learning unnormalized distributions, which have been independently proposed and studied in separate research communities, through the lens of NCE. This unified view offers new insights into existing estimators. Specifically, for exponential families, we establish the finite-sample convergence rates of the proposed estimators under a set of regularity assumptions, most of which are new.},
   primaryClass={stat.ML},
@@ -370,6 +371,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   author={Jayashankar*, Tejas and Ryu*, J. Jon and Wornell, Gregory W.},
   author+an={2=highlight},
   year={2025},
+  month=jul,
   booktitle=icml,
   abstract={We propose Score-of-Mixture Training (SMT), a novel framework for training one-step generative models by minimizing a class of divergences called the $\alpha$-skew Jensen-Shannon divergence. At its core, SMT estimates the score of mixture distributions between real and fake samples across multiple noise levels. Similar to consistency models, our approach supports both training from scratch (SMT) and distillation using a pretrained diffusion model, which we call Score-of-Mixture Distillation (SMD). It is simple to implement, requires minimal hyperparameter tuning, and ensures stable training. Experiments on CIFAR-10 and ImageNet 64x64 show that SMT/SMD are competitive with and can even outperform existing methods.},
   primaryClass = {cs.AI},
