Add ICML 2025 posters; add coauthors

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -347,6 +347,8 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   arxiv={2402.06160},
   selected={false},
   abstract={This paper questions the effectiveness of a modern predictive uncertainty quantification approach, called \emph{evidential deep learning} (EDL), in which a single neural network model is trained to learn a meta distribution over the predictive distribution by minimizing a specific objective function. Despite their perceived strong empirical performance on downstream tasks, a line of recent studies by Bengs et al. identify limitations of the existing methods to conclude their learned epistemic uncertainties are unreliable, e.g., in that they are non-vanishing even with infinite data. Building on and sharpening such analysis, we 1) provide a sharper understanding of the asymptotic behavior of a wide class of EDL methods by unifying various objective functions; 2) reveal that the EDL methods can be better interpreted as an out-of-distribution detection algorithm based on energy-based-models; and 3) conduct extensive ablation studies to better assess their empirical effectiveness with real-world datasets. Through all these analyses, we conclude that even when EDL methods are empirically effective on downstream tasks, this occurs despite their poor uncertainty quantification capabilities. Our investigation suggests that incorporating model uncertainty can help EDL methods faithfully quantify uncertainties and further improve performance on representative downstream tasks, albeit at the cost of additional computational complexity.},
+  html={https://openreview.net/forum?id=P6nVDZRZRB},
+  poster={neurips2024-poster.pdf},
 }
 
 @inproceedings{Ryu--Shah--Wornell2025,
@@ -363,6 +365,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   eprint={2409.18209},
   arxiv={2409.18209},
   selected={true},
+  poster={icml2025-nce-poster.pdf},
 }
 
 @inproceedings{Jayashankar--Ryu--Wornell2025,
@@ -380,6 +383,7 @@ We demonstrate the effectiveness of the proposed optimization framework for use 
   arXiv = {2502.09609},
   selected = {true},
   note={Spotlight (top 2.6%)},
+  poster={icml2025-smt-poster.pdf},
 }
 
 
@@ -446,12 +450,16 @@ The utility of the proposed approach is demonstrated through experiments for joi
   note={Submitted. <a href="https://openreview.net/forum?id=5wdY7N5hNn">{An extended abstract}</a> will be presented at <a href="https://spigmworkshop2024.github.io/">{ICML 2024 Workshop on Structured Probabilistic Inference & Generative Modeling}</a>.}
 }
 
-@unpublished{Jeong--Ryu--Yun--Wornell2025,
+@misc{Jeong--Ryu--Yun--Wornell2025,
   abbr={working},
   title={Efficient Parametric SVD of Koopman Operator for Stochastic Dynamical Systems},
   author={Jeong*, Minchan and Ryu*, J. Jon and Yun, Se-Young and Wornell, Gregory W.},
   year={2025},
   author+an={2=highlight},
+  eprint={2507.07222},
+  arxiv={2507.07222},
+  primaryClass={cs.LG},
+  journal={arXiv:2507.07222},
   selected={false},
   note={Submitted.}
 }
